--- a/.github/workflows/import-site.yml
+++ b/.github/workflows/import-site.yml
@@ -46,7 +46,7 @@ jobs:
           key: ${{ secrets.PMU_SSH_KEY }}
           config: ${{ secrets.PANTHEON_SSH_CONFIG }}
           known_hosts: ${{ secrets.KNOWN_HOSTS }}
-      - name: Stage updates
+      - name: Import site ${{ github.event.inputs.uuid }}
         env:
           GOOGLE_SERVICE_ACCOUNT_JSON: ${{ secrets.GOOGLE_SERVICE_ACCOUNT_JSON }}
           migrate: ${{ github.event.inputs.migrate }}
