--- a/.github/workflows/import-site.yml
+++ b/.github/workflows/import-site.yml
@@ -46,6 +46,13 @@ jobs:
           key: ${{ secrets.PMU_SSH_KEY }}
           config: ${{ secrets.PANTHEON_SSH_CONFIG }}
           known_hosts: ${{ secrets.KNOWN_HOSTS }}
+      - name: Get site VRT from PMU Classic API with provided UUID
+        run: |
+          AUTH=$(echo -ne "${{ secrets.PMU_CLASSIC_API_USER}}:${{ secrets.PMU_CLASSIC_API_PASSWORD }}" | base64 --wrap 0)
+          SITE_CLASSIC_PMU_DATA=$(curl --header "Content-Type: application/json" --header "Authorization: Basic $AUTH" \https://mu.ps-pantheon.com/api/uw/v2/site/${{ github.event.inputs.uuid }})
+          echo $SITE_CLASSIC_PMU_DATA
+          echo "::set-output name=SITE_CLASSIC_PMU_DATA::$SITE_CLASSIC_PMU_DATA"
+        id: get_site_data_from_classic_api
       - name: Import site ${{ github.event.inputs.uuid }}
         env:
           GOOGLE_SERVICE_ACCOUNT_JSON: ${{ secrets.GOOGLE_SERVICE_ACCOUNT_JSON }}
@@ -56,8 +63,7 @@ jobs:
           vrt: ${{ github.event.inputs.vrt }}
           contacts: ${{ github.event.inputs.contacts }}
           owner: ${{ github.event.inputs.owner }}
-          PMU_CLASSIC_API_PASSWORD: ${{ secrets.PMU_CLASSIC_API_PASSWORD }}
-          PMU_CLASSIC_API_USER: ${{ secrets.PMU_CLASSIC_API_USER }}
+          SITE_CLASSIC_PMU_DATA: ${{ steps.get_site_data_from_classic_api.outputs.SITE_CLASSIC_PMU_DATA }}
         run: |
           composer install --no-interaction --no-progress
           php import-site.php
