--- a/.github/workflows/import-site.yml
+++ b/.github/workflows/import-site.yml
@@ -67,8 +67,8 @@ jobs:
         run: |
           composer install --no-interaction --no-progress
           php import-site.php
-          # update_data=$(cat /tmp/update_data.json)
-          # echo "::set-output name=UPDATE_DATA::$update_data"
+          update_data=$(cat /tmp/update_data.json)
+          echo "::set-output name=UPDATE_DATA::$update_data"
         id: detect-updates-setup
       # - name: Upload artifact of JSON data
       #   uses: actions/upload-artifact@v2
@@ -76,10 +76,10 @@ jobs:
       #     name: update_data
       #     path: /tmp/update_data.json
       #     retention-days: 2
-      # - name: Store update data in realtime database
-      #   uses: w9jds/firebase-trigger@master
-      #   with:
-      #     credentials: ${{ secrets.GOOGLE_SERVICE_ACCOUNT_JSON }}
-      #     databaseUrl: https://pantheon-managed-updates-default-rtdb.firebaseio.com
-      #     path: ${{ github.event.inputs.site_uuid }}/site_info
-      #     value: ${{ steps.detect-updates-setup.outputs.UPDATE_DATA }}
+      - name: Store update data in realtime database
+        uses: w9jds/firebase-trigger@master
+        with:
+          credentials: ${{ secrets.GOOGLE_SERVICE_ACCOUNT_JSON }}
+          databaseUrl: https://pantheon-managed-updates-default-rtdb.firebaseio.com
+          path: ${{ github.event.inputs.site_uuid }}/site_info
+          value: ${{ steps.detect-updates-setup.outputs.UPDATE_DATA }}
