--- a/.github/workflows/import-site.yml
+++ b/.github/workflows/import-site.yml
@@ -47,9 +47,10 @@ jobs:
           config: ${{ secrets.PANTHEON_SSH_CONFIG }}
           known_hosts: ${{ secrets.KNOWN_HOSTS }}
       - name: Get site VRT from PMU Classic API with provided UUID
+        if: ${{ github.event.inputs.migrate == "true" }}
         run: |
           AUTH=$(echo -ne "${{ secrets.PMU_CLASSIC_API_USER}}:${{ secrets.PMU_CLASSIC_API_PASSWORD }}" | base64 --wrap 0)
-          SITE_CLASSIC_PMU_DATA=$(curl --header "Content-Type: application/json" --header "Authorization: Basic $AUTH" \https://mu.ps-pantheon.com/api/uw/v2/site/${{ github.event.inputs.uuid }})
+          SITE_CLASSIC_PMU_DATA=$(curl --header "Content-Type: application/json" --header "Authorization: Basic $AUTH" \https://mu.ps-pantheon.com/api/uw/v2/site/${{ github.event.inputs.site_uuid }})
           echo $SITE_CLASSIC_PMU_DATA
           echo "::set-output name=SITE_CLASSIC_PMU_DATA::$SITE_CLASSIC_PMU_DATA"
         id: get_site_data_from_classic_api
