try to fix site name

--- a/.github/workflows/import-site.yml
+++ b/.github/workflows/import-site.yml
@@ -52,7 +52,7 @@ jobs:
           SITE_CLASSIC_PMU_DATA=$(curl --header "Content-Type: application/json" --header "Authorization: Basic $AUTH" \https://mu.ps-pantheon.com/api/uw/v2/site/${{ github.event.inputs.site_uuid }})
           echo 'brains'
           FOO="testname"
-          echo $SITE_CLASSIC_PMU_DATA | jq --arg foo testname '. + {machinename: $foo}'
+          $SITE_CLASSIC_PMU_DATA | jq --arg foo testname '. + {machinename: $foo}'
           echo $SITE_CLASSIC_PMU_DATA
           echo "::set-output name=SITE_CLASSIC_PMU_DATA::$SITE_CLASSIC_PMU_DATA"
         id: get_site_data_from_classic_api
